tests/codegen/fail/input-object/derive_incompatible_object.stderr
error[E0277]: the trait bound `ObjectA: IsInputType<__S>` is not satisfied
 --> fail/input-object/derive_incompatible_object.rs:8:12
  |
8 |     field: ObjectA,
  |            ^^^^^^^ the trait `IsInputType<__S>` is not implemented for `ObjectA`

error[E0277]: the trait bound `ObjectA: FromInputValue<__S>` is not satisfied
    --> fail/input-object/derive_incompatible_object.rs:6:10
     |
6    | #[derive(juniper::GraphQLInputObject)]
     |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromInputValue<__S>` is not implemented for `ObjectA`
     |
note: required by a bound in `Registry::<'r, S>::arg`
    --> $WORKSPACE/juniper/src/executor/mod.rs
     |
     |         T: GraphQLType<S> + FromInputValue<S>,
     |                             ^^^^^^^^^^^^^^^^^ required by this bound in `Registry::<'r, S>::arg`
     = note: this error originates in the derive macro `juniper::GraphQLInputObject` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ObjectA: FromInputValue<__S>` is not satisfied
 --> fail/input-object/derive_incompatible_object.rs:6:10
  |
6 | #[derive(juniper::GraphQLInputObject)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromInputValue<__S>` is not implemented for `ObjectA`
  |
  = note: this error originates in the derive macro `juniper::GraphQLInputObject` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `to_input_value` found for struct `ObjectA` in the current scope
 --> fail/input-object/derive_incompatible_object.rs:6:10
  |
2 | struct ObjectA {
  | -------------- method `to_input_value` not found for this
...
6 | #[derive(juniper::GraphQLInputObject)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `ObjectA`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `to_input_value`, perhaps you need to implement it:
          candidate #1: `ToInputValue`
  = note: this error originates in the derive macro `juniper::GraphQLInputObject` (in Nightly builds, run with -Z macro-backtrace for more info)
